--- a/prepros.cfg
+++ b/prepros.cfg
@@ -4327,6 +4327,17 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "7afc9cda": {
+          "id": "7afc9cda",
+          "path": "category-section4gallery.php",
+          "output": "category-section4gallery.php",
+          "name": "category-section4gallery.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
